# cuda

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.cu  config.pbtxt  convert.sh  cuda.tex  customGeluPlugin.cpp  customGeluPlugin.h  docker-compose.yml  engine.py  gelu.txt  infer.data  inference.py  kernel_grid.cu  main.cu  matrix_mult  matrix_mult.cu  model.plan  overlap  overlap.cu  t  temp  temp.cu  test_add.cu  train.sh  tt  uff_to_engine.py  unifie.cu  utils.py
.cache/clangd/index/: blas.cu.13A12E7888931DB6.idx  blas.h.D7F07B3856F16CF6.idx  common.cu.4FF93A8A95B43568.idx  common.h.3911520EA562777E.idx  gemm.cpp.F617001CBD453BE8.idx  main.cu.59C38DC8EE6C4BAD.idx  utils.cpp.92E75E2B49F97A24.idx  utils.h.F4A924DD3254E7C7.idx
cmake/: utils.cmake
common/: CMakeLists.txt
common/include/: blas.h  common.h  gemm.h  utils.h
common/src/: blas.cu  gemm.cpp  utils.cpp
cuda/: Dockerfile
dockerfiles/: Dockerfile
include/: blas.h
math/: CMakeLists.txt
math/include/: inplaceOp.h
math/src/: inplaceOp.cu
models/: frozen_graph.pb
plugin/: .customGeluPlugin.h.swp  customGeluPlugin.cpp  customGeluPlugin.h  geluKernel.cu  geluKernel.h  requirements.txt  verify.cu
python/: check_plugin.py  engine_inference.py  gelu_plugin.py  model.py  ocr_demo.py  simple.py  uff_to_engine.py
python/utils/: common.py  utils.py
saved_model/mnist/: keras_metadata.pb  saved_model.pb
saved_model/mnist/variables/: variables.data-00000-of-00001  variables.index
src/: CMakeLists.txt  blas.cu  common.cu  gemm.cpp  utils.cpp
test/: CMakeLists.txt
test/src/: test_vector_add.cu  test_vector_add2d.cu
tools/: approx_gelu.py  data.json  test.json  uff_to_plan.py  verify.py
