cmake_minimum_required(VERSION 3.14)
project(cuda_utils LANGUAGES CXX CUDA)
if(CUDA_ENABLED)
    enable_language(CUDA)
endif()
set(CMAKE_CUDA_ARCHITECTURES 52 80)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3 -ggdb")
include(cmake/utils.cmake)

add_subdirectory(common)
add_subdirectory(test)
ALL_HEAD_PATH(sub_module_name ${CMAKE_CURRENT_SOURCE_DIR})
PROJECT_SUBMODULES(submodule ${CMAKE_SOURCE_DIR})
foreach(HEAD_INCLUDE ${sub_module_name})
    get_filename_component(abs_path ${HEAD_INCLUDE} REALPATH BASE_DIR ${CMAKE_SOURCE_DIR})
    # add_subdirectory(${abs_path})
    include_directories(${HEAD_INCLUDE}/include)
endforeach()
add_subdirectory(math)
# add_executable(main config.cu)
add_executable(main temp.cu)
enable_testing()
target_link_libraries(main utils tools cublas maths)
