enable_testing()
find_package(GTest REQUIRED)
set(sub_module "")
# 包含项目下的所有头文件
PROJECT_SUBMODULES(submodule ${CMAKE_SOURCE_DIR})
message(STATUS "## ${CMAKE_SOURCE_DIR}")

CREATE_TEST_CASE(test_vector_add ${CMAKE_SOURCE_DIR}/test)

# macro(CREATE_TEST_CASE test_name)
# set(tests_path "${CMAKE_SOURCE_PATH}/test")
# if(IS_DIRECTORY ${tests_path})
#     add_executable(${TestName} src/test_vector_add.cu)
#     target_link_libraries(${TestName} GTest::gtest GTest::gtest_main pthread add)
#    add_test(NAME ${TestName} COMMAND ${TestName})
# endif()
# endmacro()
# set(TestName Test)
# add_executable(${TestName} src/test_vector_add.cu)
# target_link_libraries(${TestName} GTest::gtest GTest::gtest_main pthread add)
# add_test(NAME ${TestName} COMMAND ${TestName})